--- a/style.css
+++ b/style.css
@@ -1,9 +1,54 @@
-#cadastro form{
-    border: 1px solid red;
-    width: 15%;
+
+/*Cadastro*/
+
+#cadastro {
+    text-align: center;
 }
-#cadastro form label{
+#cadastro form {
+    display: block;
+    border: 3px solid rgb(129, 129, 129);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    width: 15%;
+    margin-left: 39.4%;
+    padding: 40px 40px 40px 40px;
+    line-height: 150%;
+}
+#cadastro form label {
     width: 100%;
     display: block;
-    background-color: aquamarine;
+}
+
+/*Busca*/
+
+#busca {
+    text-align: center;
+}
+#busca form {
+    display: flex;
+    width: 35%;
+    height: 30px;
+    margin-left: 39%;
+    margin-top: 25px;
+}
+#busca form #buscar {
+    width: 60%;
+    height: 100%;
+    border-radius: 60px;
+    text-align: left;
+    border: none;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.671);
+}
+#busca form #lupa {
+    width: 15%;
+    height: 90%;
+    margin-top: 0.7%;
+    margin-left: 3%;
+    border-radius: 110%;
+    border: none;
+}
+#busca form #img {
+    size: 20%;
 }
