--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
     width: 15%;
-    margin-left: 39.4%;
-    padding: 40px 40px 40px 40px;
+    margin: 0 auto;
+    padding: 8px 40px 40px 40px;
     line-height: 150%;
 }
 #cadastro form label {
@@ -51,4 +51,29 @@
     margin-left: 3%;
     border-radius: 110%;
     border: none;
+}
+
+/*Login*/
+
+#login {
+    text-align: center;
+}
+#login form {
+    max-width: 12%;
+    margin: 0 auto;
+    border: 3px solid rgb(129, 129, 129);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 20px;
+    padding: 4px 40px 40px 40px;
+    line-height: 170%;
+}
+#login form label {
+    width: 100%;
+    display: block;
+}
+#login form input {
+    width: 100%;
 }
