--- a/style.css
+++ b/style.css
@@ -3,15 +3,18 @@
 
 #cadastro {
     text-align: center;
+    background-color: rgb(24, 24, 24);
+    color: white;
 }
 #cadastro form {
     display: block;
-    border: 3px solid rgb(129, 129, 129);
+    background-color: rgb(18, 18, 18);
+    border: 3px solid rgb(53, 53, 53);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
-    width: 15%;
+    width: 18%;
     margin: 0 auto;
     padding: 8px 40px 40px 40px;
     line-height: 150%;
@@ -20,11 +23,26 @@
     width: 100%;
     display: block;
 }
+#cadastro form input {
+    width: 90%;
+    height: 100%;
+    border-radius: 5px;
+}
+#cadastro form #enviar {
+    width: 50%;
+    height: 30px;
+    border: none;
+    color: white;
+    background-color: rgb(43, 43, 43);
+    cursor: pointer;
+}
 
 /*Busca*/
 
 #busca {
     text-align: center;
+    background-color: rgb(24, 24, 24);
+    color: white;
 }
 #busca form {
     display: flex;
@@ -38,30 +56,32 @@
     height: 100%;
     border-radius: 60px;
     text-align: left;
-    border: none;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.671);
+    border: 2px solid rgb(53, 53, 53);
 }
 #busca form #lupa {
     background-image: url(lupa.png);
     background-size: cover;
     cursor: pointer;
-    width: 27px;
-    height: 90%;
-    margin-top: 0.7%;
+    width: 30px;
+    height: 30px;
+    margin-top: 0%;
     margin-left: 3%;
     border-radius: 110%;
-    border: none;
+    border: 2px solid rgb(53, 53, 53);
 }
 
 /*Login*/
 
 #login {
     text-align: center;
+    background-color: rgb(24, 24, 24);
+    color: white;
 }
 #login form {
     max-width: 12%;
     margin: 0 auto;
-    border: 3px solid rgb(129, 129, 129);
+    background-color: rgb(18, 18, 18);
+    border: 3px solid rgb(53, 53, 53);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -75,5 +95,51 @@
     display: block;
 }
 #login form input {
-    width: 100%;
+    width: 80%;
+    height: 100%;
+    border-radius: 5px;
+}
+#login form button {
+    width: 70%;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background-color: rgb(43, 43, 43);
+    cursor: pointer;
+}
+
+/*Redefinição*/
+
+#redefinicao {
+    text-align: center;
+    background-color: rgb(24, 24, 24);
+    color: white;
+}
+#redefinicao form {
+    background-color: rgb(18, 18, 18);
+    max-width: 20%;
+    margin: 0 auto;
+    border: 3px solid rgb(53, 53, 53);
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding: 20px;
+    padding: 4px 40px 40px 40px;
+    line-height: 170%;
+}
+#redefinicao form input {
+    width: 60%;
+    height: 25px;
+    border-radius: 5px;
+}
+#redefinicao form button {
+    width: 30%;
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    background-color: rgb(43, 43, 43);
+    cursor: pointer;
 }
